--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "NODE_ENV=test DATABASE_URL=file:./test.db jest",
     "test:watch": "jest --watch",
     "test:e2e": "playwright test",
     "test:coverage": "jest --coverage",
