--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/node-fetch": "^2.6.12",
     "axios": "^1.7.9",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,7 +51,6 @@
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "node-cron": "^4.0.7",
-    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
@@ -77,6 +77,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
     "msw": "^2.8.6",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.5.4",
     "prisma": "^6.8.2",
     "supertest": "^7.1.1",
