--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:seed": "tsx prisma/test-seed.ts",
     "seed": "node prisma/seed.js",
     "seed:uae": "node prisma/seed-uae-diesel.js",
+    "seed:marine": "tsx prisma/seed-uae-marine-comprehensive-fixed.ts",
     "seed:admin": "tsx scripts/seed/seed-admin.ts",
     "seed:accounting": "tsx prisma/seed-accounting.ts",
     "setup:accounts": "tsx scripts/setup-chart-of-accounts.ts",
@@ -84,5 +85,8 @@
     "tailwindcss": "^4.1.8",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed-uae-marine-comprehensive-fixed.ts"
   }
 }
