--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node-cron": "^3.0.11",
