Add comprehensive seed data for diesel engine maintenance company
- Created detailed seed script with industry-specific data:
  - Company settings for Elite Diesel Engine Services LLC
  - 7 users with different roles (admin, service manager, sales, accountant, warehouse, technicians)
  - Comprehensive chart of accounts with 60+ expense categories
  - Diesel-specific inventory items (pistons, valves, filters, lubricants, tools, services)
  - Major customers (ports, oil companies, maritime authorities)
  - Key suppliers (CAT, Cummins, Shell, industrial tools)
  - Sample transactions including sales cases, quotations, and purchase orders
- Added npm script 'seed:diesel' for easy population
- Successfully populated database with UAE Marine diesel company data
- Database now contains:
  - 270 inventory items specific to diesel maintenance
  - 542 leads, 151 sales cases, 83 quotations
  - Complete financial and operational data

Co-Authored-By: Development Team <dev@enxi.com>

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "seed": "node prisma/seed.js",
     "seed:uae": "node prisma/seed-uae-diesel.js",
     "seed:marine": "tsx prisma/seed-uae-marine-comprehensive-fixed.ts",
+    "seed:diesel": "tsx prisma/seed-diesel-comprehensive.ts",
     "seed:admin": "tsx scripts/seed/seed-admin.ts",
     "seed:accounting": "tsx prisma/seed-accounting.ts",
     "seed:production": "tsx scripts/seed-production.ts",
